# rust

./: README.md
MusicStreamer/: Cargo.toml
MusicStreamer/src/: jokebox.rs  main.rs
MusicStreamer/src/http/: admin.rs
MusicStreamer/src/server/: mod.rs  music_commands.rs  tcp_server.rs
ezytutor/: .env  Cargo.toml  readme.MD
ezytutor/tutor-db/: Cargo.toml
ezytutor/tutor-db/src/: database.sql
ezytutor/tutor-db/src/iter2/: handlers.rs  routes.rs
ezytutor/tutor-db/src/iter3/: db_access.rs  handlers.rs  models.rs  state.rs
ezytutor/tutor-db/src/iter4/: db_access.rs  errors.rs  handlers.rs
ezytutor/tutor-nodb/: Cargo.toml
ezytutor/tutor-nodb/src/: handlers.rs  routes.rs  state.rs
tutor-nodb/src/: handlers.rs  models.rs  routes.rs
