[package]
name = "MusicStreamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0"
actix-rt = "2.4.0"
async-stream = "0.3.3"
bytes = "1.2.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
partial_application = "0.2.1"
atomic-counter = "1.0.1"