[package]
name = "tutor-nodb"
version = "0.1.0"
edition = "2021"
default-run="tutor-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
actix-rt = "2.9.0"
#tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.196", features = ["derive"] }
chrono = {version = "0.4.33",  features = ["serde"]}

[[bin]]
name = "basic-server"

[[bin]]
name = "tutor-service"